Today I'm working over information div adding some links and giving basic design

--- a/Styles/mqueries.css
+++ b/Styles/mqueries.css
@@ -1,23 +1,11 @@
 @media (max-width: 1200px){
-	*{
-        height: 500px;
-        width: 500px;
-		visibility: hidden;
-	}
-
-    body{
-        max-height: 500px;
-        max-width: 500px;
-        visibility: visible;
-        background-color: black;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        overflow: hidden;
+    body > *{
+        visibility: hidden;
     }
 
     .forever{
         visibility: visible;
+        display: block;
         color: white;
     }
 }
