--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -43,6 +43,7 @@ header{
     position: fixed;
     top: 0;
     right: 0;
+    z-index: 111;
 }
 /* Div containing main logo of jumeirah and navigation buttons */
 .logo-tools{
@@ -103,13 +104,14 @@ header button:hover{
 .information{
     margin-top: 0.5rem;
     background-color: rgba(0, 0, 0, 0.95);
-    position: absolute;
+    position: fixed;
     top: 100%;
     right: 50%;
     transform: translateX(50%);
     height: 600px;
     width: 90%;
     overflow-y: scroll;
+    z-index: 995;
     padding: 0.5rem 1.5rem;
 }
 
@@ -132,13 +134,13 @@ header button:hover{
 }
 /* ====================================== Utility and Experiment Classes =====================*/
 
-/*
+
 h3{
     color: white;
     font-size: 22px;
     font-family: TFArrow, "Times New Roman", Times, Baskerville, Georgia, serif;
 }
-*/
+
 /* This styles are used mainly for links and buttons in navigation bar */
 .button-font{
     color: white;
@@ -221,6 +223,6 @@ h3{
     grid-template-columns: 1fr 1fr;
 }
 
-.wrapper ul, .wrapper2 ul{
-    margin: 3rem 0;
+.wrapper ul, .wrapper2 ul, .wrapper3 ul{
+    margin-top: 1.5rem;
 }
